--- a/typing/HomePage.xaml
+++ b/typing/HomePage.xaml
@@ -8,6 +8,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
       Title="Home"
+      FontFamily="{DynamicResource fDefault}"
       Background="{DynamicResource cBackground}">
     <Page.Resources>
         <ResourceDictionary>
@@ -28,11 +29,11 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="title" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Foreground="{DynamicResource cFontcolor}" Background="{DynamicResource cTopbarBackground}" FontFamily="Noto Sans Light,Noto Sans JP">Typing - Home</TextBlock>
-        <TextBlock x:Name="messagea" Grid.Row="1" FontSize="24" TextAlignment="left" Height="30" Padding="0,3,0,0" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" FontFamily="Noto Sans Light,Noto Sans JP" HorizontalAlignment="Center"></TextBlock>
+        <TextBlock x:Name="title" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Foreground="{DynamicResource cFontcolor}" Background="{DynamicResource cTopbarBackground}">Typing - Home</TextBlock>
+        <TextBlock x:Name="messagea" Grid.Row="1" FontSize="24" TextAlignment="left" Height="30" Padding="0,3,0,0" VerticalAlignment="Center" Foreground="{DynamicResource cFontcolor}" HorizontalAlignment="Center"></TextBlock>
 
-        <Button Click="Go_title" FontSize="17" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="4" Style="{DynamicResource Button}" Content="{DynamicResource tTitle}"></Button>
-        <Button Click="Go_setting" FontSize="17" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3" Style="{DynamicResource Button}" Content="{DynamicResource tSetting}"></Button>
+        <Button Click="Go_title" FontSize="17" Grid.Row="4" Style="{DynamicResource Button}" Content="{DynamicResource tTitle}"></Button>
+        <Button Click="Go_setting" FontSize="17" Grid.Row="3" Style="{DynamicResource Button}" Content="{DynamicResource tSetting}"></Button>
         
                <Popup
             Name="BallonPopup"
