--- a/typing/ResultPage.xaml
+++ b/typing/ResultPage.xaml
@@ -7,6 +7,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ResultPage"
+      FontFamily="{DynamicResource fDefault}"
       Background="{DynamicResource cBackground}">
     <Page.Resources>
         <ResourceDictionary>
@@ -26,8 +27,8 @@
         </Grid.RowDefinitions>
 
 
-        <Button Click="retry" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Content="リトライ" Style="{DynamicResource Button}"/>
-        <Button Click="Go_home" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2" Content="ホーム" Style="{DynamicResource Button}"/>
+        <Button Click="retry" FontSize="20" Grid.Row="1" Content="リトライ" Style="{DynamicResource Button}"/>
+        <Button Click="Go_home" FontSize="20" Grid.Row="2" Content="ホーム" Style="{DynamicResource Button}"/>
         <Grid Grid.Row="0" Margin="0,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -36,7 +37,7 @@
                 <RowDefinition Height="5*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBlock x:Name="message" Text="お疲れ様でした" FontSize="60" TextAlignment="Center" Grid.Row="1"  VerticalAlignment="Center" FontFamily="Noto Sans Light,Noto Sans JP" Height="80" Foreground="{DynamicResource cFontcolor}"/>
+            <TextBlock x:Name="message" Text="お疲れ様でした" FontSize="60" TextAlignment="Center" Grid.Row="1"  VerticalAlignment="Center" Height="80" Foreground="{DynamicResource cFontcolor}"/>
 
             <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Auto" CanContentScroll="True" Margin="50,0,50,0">
                 <Grid Margin="0,0,0,0">
@@ -73,8 +74,8 @@
                         <TextBlock x:Name="typecntv" Grid.Row="4" Grid.Column="1" FontSize="25" HorizontalAlignment="Center" Foreground="{DynamicResource cFontcolor}">0</TextBlock>
                         <TextBlock x:Name="miscntv" Grid.Row="5" Grid.Column="1" FontSize="25" HorizontalAlignment="Center" Foreground="{DynamicResource cFontcolor}">0</TextBlock>
                     </Grid>
-                    <Button Click="post_text" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="1" Grid.ColumnSpan="2" Content="結果をポスト (テキスト)" Style="{DynamicResource Button}"/>
-                    <Button Click="copyr_text" FontSize="20" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2" Grid.ColumnSpan="2" Content="結果をコピー (テキスト)" Style="{DynamicResource Button}"/>
+                    <Button Click="post_text" FontSize="20" Grid.Row="1" Grid.ColumnSpan="2" Content="結果をポスト (テキスト)" Style="{DynamicResource Button}"/>
+                    <Button Click="copyr_text" FontSize="20" Grid.Row="2" Grid.ColumnSpan="2" Content="結果をコピー (テキスト)" Style="{DynamicResource Button}"/>
                 </Grid>
 
             </ScrollViewer>
