--- a/typing/languages/english.xaml
+++ b/typing/languages/english.xaml
@@ -38,6 +38,11 @@
     <system:String x:Key="tsColorTheme">Color Theme</system:String>
     <system:String x:Key="tsLangTheme">Language Theme</system:String>
     <system:String x:Key="tsPostUrl">POST URL</system:String>
+
+    <system:String x:Key="tsReceive">Receive the config from old version</system:String>
+    <system:String x:Key="tsPutBack">Put Back</system:String>
+    <system:String x:Key="tsSave">Save</system:String>
+    <system:String x:Key="tsSave_GoHome">Save and Go Home</system:String>
     
     <!--UserName-->
     <system:String x:Key="tUGuest">guest</system:String>
